# gTranslate

./: .buildinfo  README.md  announcements.html  changelog.html  faq.html  genindex.html  index.html  objects.inv  pyproject.toml  references.html  robots.txt  search.html  searchindex.js  setup.py  sitemap.xml
.github/workflows/: master-push.yml
_sources/: changelog.rst.txt  index.rst.txt
_sources/commands/: build_features.rst.txt  ground_truth.rst.txt  index.rst.txt  test.rst.txt
_sources/files/: gtranslate.warnings.log.rst.txt  translation_table_summary.tsv.rst.txt
_sources/includes/: install_block.rst.txt  manually_alias_reference.rst.txt
commands/: build_features.html  detect_table.html  fit_models.html  generate_plot.html  ground_truth.html  index.html  test.html
docs/: requirements.txt
docs/src/: announcements.rst  conf.py  faq.rst  references.rst
files/: gtranslate.log.html  gtranslate.warnings.log.html  translation_table_summary.tsv.html
gtranslate/: __init__.py  __main__.py  cli.py  exceptions.py  main.py  misc.py  tbl_predictor.py  tools.py  training_manager.py
gtranslate/biolib_lite/: execute.py  logger.py  prodigal_runner.py  seq_tk.py
gtranslate/classifiers/: ensemble_predictor.py  table_classifiers.py
gtranslate/config/: common.py  output.py
gtranslate/files/: batchfile.py  featurefile.py
gtranslate/plots/: plotter.py
includes/: install_block.html  manually_alias_reference.html
scripts/: evaluate_misclassifications.py  gtdb_training_set.py  run_gtranslate_in_chunks.py
tests/: test_exceptions.py  test_misc.py  test_tools.py
(+36 files in other folders)
